{
    "name": "Controls",
    "maps": [
        {
            "name": "User",
            "id": "e4ca3486-5f76-4d41-8355-57b77ad5d779",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "5dde31c5-05da-459e-954c-ddb57fc4f991",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseX",
                    "type": "Value",
                    "id": "14757abd-67e4-46aa-bb42-dfc87273a96e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseY",
                    "type": "Value",
                    "id": "00514fdf-6dfa-4aaa-9d54-f70c17704df9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5c5245de-7616-4d63-813f-8688fad20b6e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1f5bee7-dfd9-4cc3-89d3-33da91613bc2",
                    "path": "<Mouse>/position/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Schema",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eda4332f-292c-4401-8c55-4af229a885ec",
                    "path": "<Mouse>/position/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Schema",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Schema",
            "bindingGroup": "Schema",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}